Add API endpoints for creating and editing survey responses (#68)
- add serde feature to chrono
- add migration for creating responses table
- update docs
- add responses to models and schema
- add survey_response module
- update models
- update api endpoints
- format
- impl create survey response endpoint
- add uuid feature to rocket import
- add survey response endpoints to routes
- update survey response endpoints
- add PatchSurveyResponse
- minimal impl for edit_survey_response
- remove unused imports
- update api docs
- update SurveyResponseError

The bare minimum that gets the hard part out of the way. Does not do any
validation other than what's enforced by the database constraints.

closes #17
blocked by #53
